bugfix
PA: empty additional configuration block
Pods: status "waiting" on container page
Pods: filter pods with status "deleting"
Pods: added default volumes=[]  (fixed traceback in pstorage)
ContainerStates: added kuberdock-specific reasons and exit codes
ContainerStates: fixed "false positive" case of overlapping CS
k8s-1.1.3: succeeded containers have reason=Error

--- a/kubedock/frontend/static/css/nodes.less
+++ b/kubedock/frontend/static/css/nodes.less
@@ -303,7 +303,7 @@
                 background-color: #c3c3c3;
             }
         }
-        &.pending{
+        &.pending, &.waiting {
             &:before{
                 .border-radius(0);
                 left: 13px;
